# iree

./: .gitmodules  pyproject.toml  sitemap.xml
.github/workflows/: pkgci_test_pjrt_metal.yml
compiler/plugins/input/Shardy/InputConversion/: CMakeLists.txt  StripShardyDialect.cpp
compiler/plugins/input/StableHLO/Conversion/: CMakeLists.txt  Passes.cpp  Passes.td  StableHLOCustomCalls.cpp  StableHLOToLinalgExt.cpp  StableHLOTriangularSolveToLinalg.cpp
compiler/src/iree/compiler/Codegen/Common/GPU/test/: BUILD.bazel  CMakeLists.txt
compiler/src/iree/compiler/Codegen/SPIRV/: AppleConfig.cpp
compiler/src/iree/compiler/Dialect/Flow/Transforms/: OutlineConstants.cpp
compiler/src/iree/compiler/Dialect/Flow/Transforms/test/: outline_constants.mlir
compiler/src/iree/compiler/Dialect/HAL/Conversion/StreamToHAL/: Patterns.cpp
compiler/src/iree/compiler/Dialect/LinalgExt/IR/: LinalgExtOps.cpp
compiler/src/iree/compiler/Dialect/LinalgExt/IR/test/: invalid.mlir  roundtrip.mlir
compiler/src/iree/compiler/Dialect/SparseSolver/: CMakeLists.txt  sparse_solver.imports.mlir
compiler/src/iree/compiler/Dialect/SparseSolver/Conversion/: CMakeLists.txt  ConvertSparseSolverToVM.cpp  ConvertSparseSolverToVM.h
compiler/src/iree/compiler/Dialect/SparseSolver/IR/: CMakeLists.txt  SparseSolverDialect.cpp  SparseSolverDialect.h  SparseSolverDialect.td  SparseSolverOps.h  SparseSolverOps.td
compiler/src/iree/compiler/Dialect/Stream/Analysis/: Affinity.cpp
compiler/src/iree/compiler/Dialect/Stream/Conversion/StandardToStream/: Patterns.cpp
compiler/src/iree/compiler/Dialect/Stream/Transforms/: BUILD.bazel  CMakeLists.txt  FuseLoopIterationExecution.cpp  Passes.cpp  Passes.h  Passes.td
compiler/src/iree/compiler/Dialect/Stream/Transforms/test/: fuse_loop_iteration_execution.mlir
compiler/src/iree/compiler/Dialect/Util/Analysis/: Explorer.cpp
compiler/src/iree/compiler/Dialect/Util/Transforms/: FixedPointIterator.cpp  HoistIntoGlobals.cpp
compiler/src/iree/compiler/Modules/DenseBlas/: CMakeLists.txt  dense_blas.imports.mlir
compiler/src/iree/compiler/Pipelines/: Options.cpp  Options.h  Pipelines.cpp
compiler/src/iree/compiler/Tools/: CMakeLists.txt  init_iree_dialects.h
integrations/pjrt/python_packages/_setup_support/: iree_pjrt_setup.py
integrations/pjrt/python_packages/iree_metal_plugin/: pyproject.toml  setup.py  test_lowering.py  test_spsolve_gpu.py  test_spsolve_large.py
integrations/pjrt/python_packages/iree_metal_plugin/jax_plugins/iree_metal/: __init__.py
integrations/pjrt/src/iree_pjrt/common/: api_impl.cc  api_impl.h  iree_compiler.cc
integrations/pjrt/src/iree_pjrt/metal/: CMakeLists.txt  client.h  client.mm
integrations/pjrt/test/: bench_metal_vs_cpu.py  pyproject.toml  setup_local_test_env.sh  test_metal.py  test_metal_comprehensive.py  test_vajax_ring.py
reference/mlir-passes/CodegenCommon/: index.html
runtime/src/iree/hal/drivers/metal/: direct_allocator.m  direct_command_buffer.h  direct_command_buffer.m  executable.h  executable.m  metal_device.h  metal_device.m  staging_buffer.m
runtime/src/iree/modules/dense_blas/: CMakeLists.txt  module.c
runtime/src/iree/modules/dense_blas/backends/: accelerate.c  accelerate.h
runtime/src/iree/modules/sparse_solver/: CMakeLists.txt  baspacho_wrapper.cpp  baspacho_wrapper.h  module.c  module_metal.h  module_metal.m
runtime/src/iree/vm/: shims.c  shims.h
search/: search_index.json
